--- a/style.css
+++ b/style.css
@@ -8,6 +8,26 @@ h1 {
   color: red;
 }
 
+/* common display:none class */
+.d-none {
+  display: none;
+}
+
+.border {
+  border: 3px solid blueviolet;
+}
+
+.margin-padding {
+  margin: 10px auto;
+  padding: 10px;
+}
+
+/* Forms classes */
+.forms {
+  margin: 10px;
+  padding: 20px;
+}
+
 #h1-id {
   color: green;
 }
@@ -85,10 +105,6 @@ h1 {
 .links {
   display: grid;
   /* margin-bottom: 100px; */
-}
-
-.border {
-  border: 3px solid blueviolet;
 }
 
 ul {
